@@ -18,6 +18,7 @@
         <hamcrest.version>2.2</hamcrest.version>
         <!-- Compile versions -->
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
         <!-- tools -->
         <sortpom-plugin.version>3.2.0</sortpom-plugin.version>
         <spotless-plugin.version>2.27.1</spotless-plugin.version>
@@ -106,6 +107,7 @@
                             </format>
                         </formats>
                         <java>
+                            <removeUnusedImports/>
                             <licenseHeader>
                                 <file>${project.basedir}/config/license-header.txt</file>
                             </licenseHeader>
@@ -135,6 +137,14 @@
                     <target>19</target>
                     <release>19</release>
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
